--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "A simple daily item rotator"
 requires-python = ">=3.10"
 dependencies = [
     "python-fasthtml",
-    "pytz"
+    "pytz",
+    "modal",
 ]
 
 [project.optional-dependencies]
